fix(core): linked button component
- fixes bug where disabled button with anchor tag not showing proper disabled styles
- adds example of icons in linked buttons to docs
- prevents icon demo from displaying in docs nav

--- a/projects/elements/src/button/button.css
+++ b/projects/elements/src/button/button.css
@@ -121,6 +121,10 @@
   --color: var(--mlv-sys-interaction-disabled-color);
   --background: var(--mlv-sys-interaction-disabled-background);
   --cursor: not-allowed;
+
+  ::slotted(a) {
+    cursor: not-allowed;
+  }
 }
 
 :host([interaction*='ghost']) {
