--- a/projects/elements/src/icon/icon.css
+++ b/projects/elements/src/icon/icon.css
@@ -55,10 +55,6 @@ svg {
   transform: rotate(90deg);
 }
 
-:host([variant='inherit']) {
-  --color: currentColor;
-}
-
 :host([status='success']) {
   --color: var(--mlv-sys-support-success-color);
 }
